Refactor and more unsafe